# mua-nbv

./: .gitignore  README.md  requirements.txt  setup_env.sh
ws/src/mua_nbv_common/: README.md  package.xml  setup.cfg  setup.py
ws/src/mua_nbv_common/mua_nbv_common/: ros_helpers.py
ws/src/mua_nbv_planner/: CMakeLists.txt  README.md  package.xml
ws/src/mua_nbv_planner/config/: planner.yaml  planner_no_pred_est.yaml  planner_random.yaml  planner_static.yaml
ws/src/mua_nbv_planner/include/: ellipsoid_clustering.hpp  ring_generator.hpp  visualization.hpp
ws/src/mua_nbv_planner/src/: ring_generator_node.cpp  scorer_node.cpp  voxel_map_node.cpp
ws/src/mua_nbv_prediction/: README.md  package.xml  setup.cfg  setup.py
ws/src/mua_nbv_prediction/mua_nbv_prediction/: tgpr.py
ws/src/mua_nbv_py_utils/: README.md  package.xml  setup.cfg  setup.py
ws/src/mua_nbv_py_utils/mua_nbv_py_utils/: pcd_io.py  transforms.py
ws/src/simulation_bringup/: README.md  package.xml  setup.py
ws/src/simulation_bringup/config/: bridge.yaml  simulation.yaml  simulation_circle.yaml  simulation_cv_random.yaml  simulation_figure8.yaml  simulation_line.yaml  simulation_static.yaml  simulation_wiggle.yaml
ws/src/simulation_bringup/launch/: simulation.launch.py
ws/src/simulation_bringup/models/pursuer/: model.sdf
ws/src/simulation_bringup/simulation_bringup/: cloud_aligner.py  cloud_capturer.py  experiment_coordinator.py  pursuer_spawner.py  sim_pose_tf_bridge.py  sim_static_tf.py  target_stepper.py  trajectory_predictor.py
ws/src/simulation_bringup/worlds/: sim.world
ws/src/testbed_bringup/: README.md  package.xml  setup.cfg  setup.py
ws/src/testbed_bringup/config/: planner_testbed_dynamic.yaml  planner_testbed_dynamic_no_pred_est.yaml  planner_testbed_static.yaml  testbed_dynamic.yaml  testbed_static.yaml
ws/src/testbed_bringup/launch/: testbed.launch.py
ws/src/testbed_bringup/testbed_bringup/: closest_candidate_coordinator.py  cloud_capturer.py  coordinated_trajectory_follower.py  experiment_coordinator.py  pursuer_mover.py  pursuer_teleporter.py  rgb_capturer.py  static_tf_broadcaster.py  target_stepper.py  trajectory_follower.py  trajectory_predictor.py  vrpn_tf_bridge.py
