<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mua_nbv_prediction</name>
  <version>0.1.0</version>
  <description>
    Temporal Gaussian Process Regression (TGPR) target trajectory predictor
    with constant-velocity prior for MUA-NBV. Depends on JAX for GPU-accelerated
    fixed-lag GP smoothing. No ROS dependencies.
  </description>
  <maintainer email="karenli@g.harvard.edu">karen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>mua_nbv_py_utils</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
